<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classrooms</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="post">Write Post</string>
    <string name="makeclassroom">Create Class</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="writehere">Write Here</string>
	<string-array name="catagories_array">
        <item>Science</item>
        <item>Arts</item>
        <item>Math</item>
        <item>Literature</item>
        <item>Computing</item>
        <item>Engineering</item>
        <item>Health</item>
        <item>Business</item>
    </string-array>
    <string-array name="locations_array">
        <item>CS 175</item>
        <item>Algebra</item>
        <item>Calculus</item>
        <item>Drawing</item>
        <item>CS 126</item>
        <item>Engineering 101</item>
        <item>Nursing 101</item>
        <item>Business 101</item>
        <item>Math 15</item>
        <item>Humn 1</item>
    </string-array>
        <string name="postedin">posted in</string>
        <string name="postedon">posted on</string>
        <string name="school">University of URChoice</string>
        <string name="home">Home</string>
        <string name="profile">Profile</string>
        <string name="writepost">Write Post</string>
        <string name="commenton">commented on</string>
        <string name="comment">Comment</string>
        <string name="joinclassroom">Join Classroom</string>
        <string name="uploadfile">Upload File</string>
        <string name="sampledescription">" Algebra is one of the broad parts of mathematics, together with number theory, geometry and analysis. In its most general form algebra is the study of symbols and the rules for manipulating symbols and is a unifying thread of all of mathematics."</string>
	<string-array name="draweritems">
	    <item>Home</item>
        <item>Profile</item>
        <item>Create Class</item>
        <item>Write Post</item>
        <item>Upload File</item>
	</string-array>
        <string name="choosepic">Select Profile pic</string>
        <string name="search">Search</string>    
</resources>
