<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ImageView
		android:id="@+id/profilerow_imageView_profilePic"
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:src="@drawable/me_gusta" />

	<TextView
		android:id="@+id/makePost_textView_classroom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_toRightOf="@+id/profilerow_imageView_profilePic"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:text="@string/name"
		android:textAppearance="?android:attr/textAppearanceLarge" />
		
	<TextView
		android:id="@+id/profile_textView_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/makePost_textView_classroom"
		android:layout_below="@+id/makePost_textView_classroom"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:text="@string/school"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/profile_textView_description"
	    android:layout_centerHorizontal="true" >

	    <TableRow
	        android:id="@+id/profile_tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/profile_button_makepost"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_column="1"
	            android:text="@string/post" />

	        <Button
	            android:id="@+id/profile_button_makeclassroom"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_column="1"
	            android:text="@string/makeclassroom" />
	    </TableRow>
	</TableLayout>

</RelativeLayout>


