<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"  
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/homerow_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/classrooms_logo" />

    <EditText
        android:id="@+id/register_editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homerow_imageView"
        android:background="@drawable/flat_selector_normal_form"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username"
        android:paddingTop="8dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_editText_username"
        android:layout_centerHorizontal="true"
        android:background="@drawable/flat_selector_normal_form"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:paddingTop="8dp" />

    <EditText
        android:id="@+id/register_editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_editText_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/flat_selector_normal_form"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="8dp" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_selector"
        android:layout_alignLeft="@+id/register_editText_password"
        android:layout_alignRight="@+id/register_editText_password"
        android:layout_below="@+id/register_editText_password"
        android:text="@string/register" />

</RelativeLayout>
