<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@drawable/login_bg" >
	
    <ImageView
        android:id="@+id/homerow_imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
		android:scaleType="centerCrop"
        android:src="@drawable/classrooms_logo" />

    <EditText
        android:id="@+id/login_editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_selector_forms"
        android:layout_below="@+id/homerow_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="15"
        android:hint="@string/username" 
        />


    <EditText
        android:id="@+id/login_editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_selector_forms_bottom"
        android:layout_alignLeft="@+id/login_editText_username"
        android:layout_alignRight="@+id/login_editText_username"
        android:layout_below="@+id/login_editText_username"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:shadowColor="#22313F"
		android:shadowDx="1"
		android:shadowDy="3"
		android:shadowRadius="5"
        android:background="@drawable/flat_selector"
        android:layout_alignLeft="@+id/login_editText_password"
        android:layout_alignRight="@+id/login_editText_username"
        android:layout_below="@+id/login_editText_password"
        android:text="@string/login"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/login_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:shadowColor="#22313F"
		android:shadowDx="1"
		android:shadowDy="3"
		android:shadowRadius="5"
        android:background="@drawable/flat_selector"
        android:layout_alignLeft="@+id/login_button_login"
        android:layout_alignRight="@+id/login_button_login"
        android:layout_below="@+id/login_button_login"
        android:text="@string/register" 
        android:layout_marginTop="4dp"/>

</RelativeLayout>
