<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg" >

    <EditText android:id="@+id/makeClassroom_editText_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="45dp" android:ems="10" android:hint="@string/name" /><Spinner
        android:id="@+id/makeClassroom_spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makeClassroom_editText_name"
        android:layout_alignRight="@+id/makeClassroom_editText_name"
        android:layout_below="@+id/makeClassroom_editText_name"
        android:paddingTop="8dp" />

    <EditText
        android:id="@+id/makeClassroom_editText_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makeClassroom_spinner_category"
        android:layout_below="@+id/makeClassroom_spinner_category"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="8"
        android:paddingTop="8dp" />

    <Button
        android:id="@+id/makeClassroom_button_createClassroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/makeClassroom_editText_description"
        android:layout_alignRight="@+id/makeClassroom_editText_description"
        android:layout_below="@+id/makeClassroom_editText_description"
        android:paddingTop="8dp"
        android:text="@string/makeclassroom" />

</RelativeLayout>
