<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/bg" >
    
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="0px" 
    	android:layout_weight="0.25" >

	    <ImageView
	        android:id="@+id/postclassroom_imageView_profilePic"
	        android:layout_width="45dp"
	        android:layout_height="45dp"
	        android:layout_alignParentLeft="true"
	        android:paddingLeft="10dp"
	        android:paddingRight="0dp"
	        android:paddingTop="10dp"
	        android:src="@drawable/me_gusta" />

	    <TextView
	        android:id="@+id/postclassroom_textView_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@+id/postclassroom_imageView_profilePic"
	        android:paddingLeft="5dp"
	        android:paddingRight="0dp"
	        android:paddingTop="10dp"
	        android:text="Large Text"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/postclassroom_textView_postedin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/postclassroom_textView_name"
	        android:layout_below="@+id/postclassroom_textView_name"
	        android:paddingLeft="5dp"
	        android:paddingRight="0dp"
	        android:text="@string/postedon"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/darker_gray" />
	
	    <TextView
	        android:id="@+id/postclassroom_textView_location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/postclassroom_textView_postedin"
	        android:layout_alignBottom="@+id/postclassroom_textView_postedin"
	        android:layout_toRightOf="@+id/postclassroom_textView_postedin"
	        android:paddingLeft="3dp"
	        android:paddingRight="0dp"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/darker_gray" />
	
	    <TextView
	        android:id="@+id/postclassroom_textView_post"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	
	        android:layout_alignRight="@+id/postclassroom_textView_postedin"
	        android:layout_below="@+id/postclassroom_textView_postedin"
	        android:paddingLeft="5dp"
	        android:paddingRight="0dp"
	        android:paddingTop="5dp"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="0px" 
    	android:layout_weight="0.15" 
    	android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/flat_selector_forms"
            android:hint="@string/writehere" >

        </EditText>

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/flat_selector"
            android:paddingLeft="4dp"
            android:shadowColor="#22313F"
            android:shadowDx="1"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:text="@string/comment"
            android:textColor="#FFFFFF" />
        
	</LinearLayout>
    
	<fragment
	    android:id="@+id/comments_list_fragment"
	    android:name="com.classrooms.fragments.commentsListFragment"
	   	android:layout_weight="0.60"
 	 	android:layout_width="match_parent"
     	android:layout_height="0px" />
	
</LinearLayout>
