<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/makepost_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:background="#333333">
   	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:background="@drawable/bg" >
	
	    <Spinner
	        android:id="@+id/makePost_spinner_location"
	        android:background="@drawable/flat_selector_make_form"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/makePost_editText_name"
	        android:layout_alignRight="@+id/makePost_editText_name"
	        android:layout_below="@+id/makePost_editText_name"
	        android:paddingTop="8dp" />
	
	    <EditText
	        android:id="@+id/makePost_editText_post"
	        android:background="@drawable/flat_selector_make_form"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/makePost_spinner_location"
	        android:layout_below="@+id/makePost_spinner_location"
	        android:ems="10"
	        android:inputType="textMultiLine"
	        android:lines="8"
	        android:paddingTop="8dp"
	        android:text="@string/writehere" />
	
	    <Button
	        android:id="@+id/makePost_button_create"
	        android:background="@drawable/flat_selector_post"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_alignLeft="@+id/makePost_editText_post"
	        android:layout_alignRight="@+id/makePost_editText_post"
	        android:layout_below="@+id/makePost_editText_post"
	        android:text="@string/post"
	        android:textColor="@color/button_color_1" />
	
	    <EditText
	        android:id="@+id/makePost_editText_name"
	        android:background="@drawable/flat_selector_make_form"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="45dp"
	        android:ems="10"
	        android:hint="@string/name" >
	
	        <requestFocus />
	    </EditText>
	
	</RelativeLayout>
	
	<ListView android:id="@+id/makepost_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFFFFF"/>
=======

    <android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/makepost_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg" >

        <Spinner
                android:id="@+id/makePost_spinner_location"
                android:background="@drawable/flat_selector_normal_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/makePost_editText_name"
                android:layout_alignRight="@+id/makePost_editText_name"
                android:layout_below="@+id/makePost_editText_name"
                android:paddingTop="8dp" />

        <EditText
                android:id="@+id/makePost_editText_post"
                android:background="@drawable/flat_selector_normal_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/makePost_spinner_location"
                android:layout_below="@+id/makePost_spinner_location"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="8"
                android:paddingTop="8dp"
                android:text="@string/writehere" />

        <Button
                android:id="@+id/button1"
                android:background="@drawable/flat_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@+id/makePost_editText_post"
                android:layout_alignRight="@+id/makePost_editText_post"
                android:layout_below="@+id/makePost_editText_post"
                android:text="@string/post"
                android:textColor="@color/button_color_1" />

        <EditText
                android:id="@+id/makePost_editText_name"
                android:background="@drawable/flat_selector_normal_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:ems="10"
                android:hint="@string/name" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <ListView android:id="@+id/makepost_drawer"
              android:layout_width="240dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@android:color/transparent"
              android:dividerHeight="0dp"
              android:background="#FFFFFF"/>

>>>>>>> origin/revision-1
</android.support.v4.widget.DrawerLayout>